--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
