--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kcpetersen111/productivityApp#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "mongoose": "^6.4.4",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
