--- a/server/Makefile
+++ b/server/Makefile
@@ -4,7 +4,7 @@ build:
 	npx tsc
 
 run:
-	node server-build/index.js
+	node ../server-build/index.js
 
 clean:
-	rm -r build
+	rm -r ../server-build/ ./node_modules ./package-lock.json
