--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,16 @@
   },
   "homepage": "https://github.com/kcpetersen111/productivityApp#readme",
   "dependencies": {
+    "@types/passport": "^1.0.9",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.4.4",
+    "passport": "^0.6.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13"
   }
 }
