--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.4.4",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
