Fixed one bug in the makefile - I like checking out main better than origin/main.

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -24,7 +24,7 @@ ifdef branch
 	@printf '\n\nChecking out branch...\n'
 	git checkout $(branch)
 	@printf '\n\nSwitching back to main...\n'
-	git checkout origin/main
+	git checkout main
 	@printf '\n\nApplying archive tag to $(branch)...\n'
 	git tag archive/$(branch) $(branch)
 	@printf '\n\ndeleting local copy of $(branch)...\n'
