--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
+    "vue-responsive-video-background-player": "^2.2.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
   },
