--- a/server/Makefile
+++ b/server/Makefile
@@ -3,6 +3,7 @@ all: run
 packages:
 	cp package.json ../server-build/package.json
 	cd ../server-build && npm install
+	cd ../server-build && npm install typescript --save
 
 build: packages
 	npx tsc
