--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kcpetersen111/productivityApp#readme",
   "dependencies": {
     "@types/passport": "^1.0.9",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
@@ -27,6 +28,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13"
   }
 }
