updating the docker file and the config to support pushing to heroku

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -30,7 +30,7 @@ COPY package*.json . ../server-build/
 
 RUN cd ../server-build/. && npm install
 
-EXPOSE 8081
+EXPOSE ${PORT}
 
 # CMD [ "ls" ]
 
