Updated the server makefile to also run npm install in the local directory before continuing (without this, the server build will always fail when you run make after a new package has been added - such as bcrypt earlier today).

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,9 +1,13 @@
 all: run
 
-packages:
+install:
+	npm install
+
+packages: install
 	cp package.json ../server-build/package.json
 	cd ../server-build && npm install
 	cd ../server-build && npm install typescript --save
+
 
 build: packages
 	npx tsc
