Redoing the README.md to be a bit better

--- a/server/Makefile
+++ b/server/Makefile
@@ -2,7 +2,8 @@ all: run
 
 packages:
 	cp package.json ../server-build/package.json
-	cd ../server-build && npm install
+	cd ../server-build && npm install	
+	cd ../server-build && npm install typescript --save
 
 build: packages
 	npx tsc
